fix spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
 	float: left;
 }
 
-.fighter
+div .fighter
 {
 	position: relative;
 	padding: 1rem;
@@ -43,7 +43,7 @@
 #gameContainer 
 {
 	color: white;
-	width: 480px;
+	width: 40%;
 	margin-left: auto;
 	margin-right: auto;
 	float: left;
@@ -54,18 +54,23 @@ h1
 	color: white;
 	text-align: center;
 	font-size: 2rem;
+	margin-bottom: 1rem;
 }
 #messageContainer
 {
 	font-family: monospace;
-	width: 480px;
 	margin: 1rem;
 	color: grey;
-	width: 480px;
+	width: 40%;
 	float: left;
+}
+#messageContainer h2
+{
+	padding-bottom: 0.5rem;
 }
 
 body
 {
 	background-color: black;
+	padding: 1rem;
 }
